@@ -344,9 +344,6 @@ ext.MAVEN_GROUP_ID = "org.openjfx"
 ext.enableNativeGraphics='--enable-native-access=javafx.graphics'
 ext.enableNativeAll='--enable-native-access=javafx.graphics,javafx.media,javafx.web'
 
-// FIXME: Remove this when JDK-8334137 is fixed
-ext.allowSunMiscUnsafe = '--sun-misc-unsafe-memory-access=allow'
-
 // Verify that the architecture & OS are supported configurations. Note that
 // at present building on PI is not supported, but we would only need to make
 // some changes on assumptions on what should be built (like SWT / Swing) and
@@ -1198,11 +1195,6 @@ void writeArgsFile(boolean isCompile, File dest, List<String> libpath, List<Stri
         if (!isCompile) {
             dest << enableNativeAll
             dest << "\n"
-            // FIXME: Remove this when JDK-8334137 is fixed
-            if (jdk24OrLater) {
-                dest << allowSunMiscUnsafe
-                dest << "\n"
-            }
         }
     }
 }
@@ -2300,10 +2292,6 @@ project(":graphics") {
     project.ext.moduleRuntime = true
     project.ext.moduleName = "javafx.graphics"
 
-    // FIXME: Remove this setting when JDK-8334137 is fixed
-    // Disable javac -Werror until we stop using sun.misc.Unsafe
-    project.ext.disableJavacWerror = true
-
     getConfigurations().create("antlr");
 
     sourceSets {
@@ -2700,10 +2688,6 @@ project(":graphics") {
     test {
         def cssDir = file("${TEST_SDK_DIR}/shims/${moduleName}/javafx")
         jvmArgs enableNativeGraphics
-        // FIXME: Remove this when JDK-8334137 is fixed
-        if (jdk24OrLater) {
-            jvmArgs allowSunMiscUnsafe
-        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
         enableAssertions = true
@@ -2793,10 +2777,6 @@ project(":controls") {
     test {
         def cssDir = file("${TEST_SDK_DIR}/shims/${moduleName}/javafx")
         jvmArgs enableNativeGraphics
-        // FIXME: Remove this when JDK-8334137 is fixed
-        if (jdk24OrLater) {
-            jvmArgs allowSunMiscUnsafe
-        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
     }
@@ -3019,11 +2999,6 @@ project(":swing") {
         enabled = IS_FULL_TEST && IS_AWT_TEST
 
         jvmArgs enableNativeGraphics
-
-        // FIXME: Remove this when JDK-8334137 is fixed
-        if (jdk24OrLater) {
-            jvmArgs allowSunMiscUnsafe
-        }
     }
 
     if (COMPILE_SWING) {
@@ -3091,11 +3066,6 @@ project(":swt") {
 
         jvmArgs enableNativeGraphics
 
-        // FIXME: Remove this when JDK-8334137 is fixed
-        if (jdk24OrLater) {
-            jvmArgs allowSunMiscUnsafe
-        }
-
         if (IS_MAC) {
             enabled = false
             logger.info("SWT tests are disabled on MAC, because Gradle test runner does not handle -XstartOnFirstThread properly (https://issues.gradle.org/browse/GRADLE-3290).")
@@ -3145,10 +3115,6 @@ project(":fxml") {
         // tracker and this attempts to fire up the toolkit and this looks for native libraries and fails,
         // we have to use the stub toolkit for now.
         jvmArgs enableNativeGraphics
-        // FIXME: Remove this when JDK-8334137 is fixed
-        if (jdk24OrLater) {
-            jvmArgs allowSunMiscUnsafe
-        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit"
         // FIXME: change this to also allow JDK 9 boot jdk
         classpath += files("$JDK_HOME/jre/lib/ext/nashorn.jar")
@@ -3891,11 +3857,6 @@ project(":web") {
         // enable native access for all modules with native code
         jvmArgs enableNativeAll
 
-        // FIXME: Remove this when JDK-8334137 is fixed
-        if (jdk24OrLater) {
-            jvmArgs allowSunMiscUnsafe
-        }
-
         // Run web tests in headless mode
         systemProperty 'glass.platform', 'Monocle'
         systemProperty 'monocle.platform', 'Headless'
@@ -4303,11 +4264,6 @@ project(":systemTests") {
         jvmArgs enableNativeAll
 
         maxHeapSize = "1000m"
-
-        // FIXME: Remove this when JDK-8334137 is fixed
-        if (jdk24OrLater) {
-            jvmArgs allowSunMiscUnsafe
-        }
 
         // Parse testPatchModuleArgs looking for "*module-path".
         // Save path if found so we can pass it to the module launcher tests
